# termrocket

./: .gitignore  Cargo.toml  README.md  install.fish
.github/workflows/: release.yml
conf.d/: termrocket.fish
fish/conf.d/: termrocket.fish
fish/functions/: git.fish
functions/: _termrocket_download.fish  git.fish
src/: main.rs
